# wport

./: README.md  setup.cfg  setup.py  wport.py  wport2.py
.github/workflows/: python-publish.yml
src/: __init__.py  wport.py
src/wport.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/wport_OCTOMANY.egg-info/: PKG-INFO  SOURCES.txt
wport_OCTOMANY.egg-info/: PKG-INFO  SOURCES.txt
