[metadata]
name = wport-OCTOMANY
version = 1.0.0
author = Maxime Beauchamp
author_email = cybersecmax@outlook.com
description = Common ports information fetcher for pentesting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Octomany/wport
project_urls =
    Bug Tracker = https://github.com/Octomany/wport/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src